<resources
    xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name" translatable="false">Movie Corner</string>
    <string name="action_about" translatable="false">About</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_share" translatable="false">Share</string>
    <string name="action_search" translatable="false">Search</string>
    <string name="tab_about" translatable="false">About</string>
    <string name="tab_trailers" translatable="false">Trailers</string>
    <string name="tab_reviews" translatable="false">Reviews</string>
    <string name="menu_favorites" translatable="false">My Favorites</string>
    <string name="menu_sort_by" translatable="false">Sort By</string>
    <string name="menu_now_playing" translatable="false">In Theatres</string>
    <string name="menu_upcoming" translatable="false">Releasing Soon</string>
    <string name="menu_top_rated" translatable="false">Top Rated</string>
    <string name="menu_most_popular" translatable="false">Most Popular</string>
    <string name="menu_kids_movies" translatable="false">Kids Movies</string>
    <string name="menu_notifications" translatable="false">Notifications</string>
    <string name="menu_communicate" translatable="false">Communicate</string>
    <string name="menu_comment" translatable="false">Give Feedback</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="title_activity_help" translatable="false">Features</string>
    <string name="content_authority" translatable="false">com.anuradha.moviecorner</string>
    <string name="account_type" translatable="false">moviecorner.anuradha.com</string>
    <!-- for storing values in shared preferences -->
    <string name="pref_sort_key" translatable="false">sort_by</string>
    <string name="pref_fragment_reset_key" translatable="false">orientation</string>
    <string name="pref_search_title_result" translatable="false">search_title_result</string>
    <string name="pref_search_title" translatable="false">search_title</string>
    <string name="pref_nav_drawer_open" translatable="false">nav_drawer_open_key</string>
    <string name="default_search_title" translatable="false">default_search_title</string>
    <!-- for storing values in bundle during orientation changes -->
    <string name="reviews_data" translatable="false">reviews_data</string>
    <string name="selected_position" translatable="false">selected_position</string>
    <string name="default_sort" translatable="false">now_playing</string>
    <string name="details_reset" translatable="false">yes</string>
    <string name="no_details_reset" translatable="false">no</string>
    <string name="content_desc_poster" translatable="false">movie poster</string>
    <string name="genre" translatable="false">GENRE</string>
    <string name="genre_tab" translatable="false">GENRE\t\t\t\t%1$s</string>
    <string name="runtime" translatable="false">RUNTIME</string>
    <string name="runtime_tab" translatable="false">RUNTIME\t\t\t%1$s</string>
    <string name="director" translatable="false">DIRECTOR</string>
    <string name="director_tab" translatable="false">DIRECTED BY:\t\t\t%1$s</string>
    <string name="homepage" translatable="false">HOMEPAGE\n%1$s</string>
    <string name="homepage_tab" translatable="false">HOMEPAGE\t\t%1$s</string>
    <string name="backdrop" translatable="false">Backdrop Image</string>
    <string name="cast" translatable="false">CAST</string>
    <string name="default_title" translatable="false">Title</string>
    <string name="default_rating" translatable="false"><b>%1$s</b>/10</string>
    <string name="default_release_date" translatable="false">2016</string>
    <string name="trailers_header" translatable="false">TRAILERS</string>
    <string name="reviews_header" translatable="false">Read Reviews</string>
    <string name="review_author" translatable="false">Review by %1$s</string>
    <string name="not_available_sign" translatable="false">-</string>
    <string name="default_synopsis" translatable="false">Movie Overview not available</string>
    <string name="network_not_available" translatable="false">NO NETWORK</string>
    <string name="empty_movie" translatable="false">Please, Click on a movie to see the details :)</string>
    <string name="empty_list" translatable="false">   Network unavailable. \nPlease check your network connection and try again. </string>
    <string name="watch_trailer" translatable="false"> Hey! Watch the trailer http://youtube.com/watch?v=%1$s  for the movie  \"%2$s\" </string>
    <string name="trailers_empty" translatable="false">Trailer not Available </string>
    <string name="reviews_empty" translatable="false"> Review not Available </string>
    <string name="no_favorites" translatable="false">No Favourites found</string>
    <string name="favorite_movie" translatable="false">Saved as favorite</string>
    <string name="not_favorite_movie" translatable="false">"Not favorite anymore"</string>
    <string name="base_url" translatable="false">"http://api.themoviedb.org/3/"</string>
    <string name="base_poster_path" translatable="false">"http://image.tmdb.org/t/p/w185//"</string>
    <string name="query_param" translatable="false">sort_by</string>
    <string name="api_key" translatable="false">api_key</string>
    <string name="page_url_param" translatable="false">page</string>
    <string name="movie_url_param" translatable="false">movie</string>
    <string name="query_url_param" translatable="false">query</string>
    <string name="title_activity_detail" translatable="false">MovieDetail</string>
    <string name="delimiter" translatable="false">-</string>
    <string-array name="sort_values" translatable="false">
        <item>favorites</item>
        <item>now_playing</item>
        <item>upcoming</item>
        <item>top_rated</item>
        <item>popular</item>
        <item>kids_movies</item>
        <item>opening_this_week</item>
        <item>in_theaters</item>
        <item>search_title</item>
    </string-array>
    <string name="favorite_text" translatable="false">FAVORITE</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="share_body" translatable="false"> Let me recommend you the MovieCorner application. https://play.google.com/store/apps/details?id=com.anuradha.moviewatch \n</string>
    <string name="email_body" translatable="false"> &lt;Please send us your comments or any suggestions for improvement.\nThanks&gt;</string>
    <string name="email_id" translatable="false">anoo_radha@outlook.com</string>
    <string name="choose_one" translatable="false"> choose one </string>
    <string name="no_mail_apps" translatable="false">No applications to support email!</string>
    <string name="searched_movie_title_unavailable" translatable="false"> Please Search a Movie Title</string>
    <string name="play_trailer">Play the trailer</string>
    <!--For About Activity-->
    <string name="by">by</string>
    <string name="name">ANURADHA OHM</string>
    <!-- Muzei -->
    <string name="muzei_description" translatable="false">Today\'s poster</string>
    <!-- Notification Format -->
    <string name="notification_subtitle" translatable="false">Week\'s Release</string>
    <string name="format_notification">\n<xliff:g id="title">%1$s</xliff:g> -- <xliff:g id="genre">%2$s</xliff:g> </string>
    <string name="format_inbox_notification">\n<xliff:g id="title">%1$s</xliff:g> -- <xliff:g id="genre">%2$s</xliff:g> </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification" translatable="false">last_notification</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label" translatable="false">Movie Notifications</string>
    <string name="pref_enable_notifications_true" translatable="false">Enabled</string>
    <string name="pref_enable_notifications_false" translatable="false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <!--Strings related to setting Favorite Genre for notification-->
    <string name="pref_genre_key" translatable="false">favorite_genre</string>
    <string name="pref_genre_label" translatable="false">Favorite Genre</string>
    <string name="default_genre" translatable="false">All</string>
    <string name="genre_dialog_title" translatable="false">Choose preferred Genre</string>
    <string name="genre_summary" translatable="false">All Genre(Default)</string>
    <string-array name="genre_values" translatable="false">
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Biography</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Drama</item>
        <item>Documentary</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>
    <string-array name="genre_entries" translatable="false">
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Biography</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Drama</item>
        <item>Documentary</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>
    <!-- Widget -->
    <string name="widget_title" translatable="false">BoxOffice Top Ten</string>
    <string name="widget_name" translatable="false"> Movie Corner</string>
    <string name="empty_widget" translatable="false">Oops! No movies for the selected genre </string>
    <string name="loading" translatable="false">Loading...</string>
    <!--Help-->
    <string name="widget_help_contentdesc" translatable="false">Widget</string>
    <string name="widget_help_text" translatable="false">Access Top ten Box Office Hits from the homescreen! Add widget to the homescreen.
        First, touch and hold an open space on your home screen. Click the widgets drawer and add MovieCorner widget</string>
    <string name="notifications_help_contentdesc" translatable="false">Notifications</string>
    <string name="notifications_help_text" translatable="false">Get Notified when movie of your favorite genre is released this week!
        Choose favorite Genre by clicking on the menu. (Click on Settings -> Favorite Genre and choose from the list. If none is selected, all movies releasing that week will be notified) </string>
    <string name="wallpaper_help_contentdesc" translatable="false">Setting Wallpaper</string>
    <string name="wallpaper_help_text" translatable="false">Set your favorite movie poster as the wallpaper! Just select a movie as your *favorite, download
                MUZEI Live Wallpaper Application and customize MovieCorner as the source. Also adjust Blur, Dim and Grey of wallpaper from Muzei settings.
    \n  * Must have atleast one movie as your favorite for this feature to work</string>
    <string name="help_general" translatable="false">Make your device more lively with these features!</string>

    <string name="banner_ad">Banner Ad</string>
    //Adding Google AdMob - testing the banner ad unit ID
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
