<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_general"
            android:textSize="18sp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_help_contentdesc"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="@dimen/small_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/widget_help_contentdesc"
                android:src="@drawable/widget_screenshot"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_help_text"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications_help_contentdesc"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="@dimen/small_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:contentDescription="@string/notifications_help_contentdesc"
                android:src="@drawable/notifications_screenshot" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications_help_text"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wallpaper_help_contentdesc"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="@dimen/small_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:contentDescription="@string/wallpaper_help_contentdesc"
                android:src="@drawable/wallpaper_screenshot" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/wallpaper_help_text"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>