<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/fab_margin">

            <ImageView
                android:id="@+id/poster_imgview"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:paddingLeft="@dimen/small_margin"
                android:paddingStart="@dimen/small_margin"
                android:paddingRight="@dimen/small_margin"
                android:paddingEnd="@dimen/small_margin"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/releasedt_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    tools:text="@string/default_release_date"
                    android:paddingBottom="@dimen/activity_horizontal_margin"/>

                <TextView
                    android:id="@+id/rating_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    tools:text="@string/default_rating" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/genre" />
                <TextView
                    android:id="@+id/genre_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    tools:text="@string/default_rating" />

                <TextView
                    android:id="@+id/runtime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/runtime" />
                <TextView
                    android:id="@+id/runtime_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    tools:text="@string/default_rating" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/synopsis_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:textSize="14sp"
            android:textColor="@color/primary_text"
            tools:text="@string/default_synopsis" />
        <TextView
            android:id="@+id/director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin = "@dimen/fab_margin"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@color/accent"
            android:text="@string/director" />

        <TextView
            android:id="@+id/director_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            tools:text="@string/default_rating" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@color/accent"
            android:text="@string/cast" />

        <TextView
            android:id="@+id/cast_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            tools:text="@string/default_rating" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
